translation-methods/python-obfuscator/pkg/parser/y.output

state 0
	$accept: .File $end 
	Program: .    (5)

	NAME  shift 8
	DEF  shift 5
	.  reduce 5 (src line 73)

	File  goto 1
	Program  goto 2
	Function  goto 3
	Line  goto 4
	FunctionCall  goto 6
	Assignment  goto 7

state 1
	$accept:  File.$end 

	$end  accept
	.  error


state 2
	File:  Program.BREAK 
	File:  Program.    (2)

	BREAK  shift 9
	.  reduce 2 (src line 56)


state 3
	Program:  Function.BREAK Program 

	BREAK  shift 10
	.  error


state 4
	Program:  Line.BREAK Program 

	BREAK  shift 11
	.  error


state 5
	Function:  DEF.NAME '(' Args ')' ':' BREAK TAB FunctionBody 

	NAME  shift 12
	.  error


state 6
	Line:  FunctionCall.    (15)

	.  reduce 15 (src line 141)


state 7
	Line:  Assignment.    (16)

	.  reduce 16 (src line 146)


state 8
	FunctionCall:  NAME.'(' ArgsExpr ')' 
	Assignment:  NAME.'=' Expr 

	'('  shift 13
	'='  shift 14
	.  error


state 9
	File:  Program BREAK.    (1)

	.  reduce 1 (src line 50)


state 10
	Program:  Function BREAK.Program 
	Program: .    (5)

	NAME  shift 8
	DEF  shift 5
	.  reduce 5 (src line 73)

	Program  goto 15
	Function  goto 3
	Line  goto 4
	FunctionCall  goto 6
	Assignment  goto 7

state 11
	Program:  Line BREAK.Program 
	Program: .    (5)

	NAME  shift 8
	DEF  shift 5
	.  reduce 5 (src line 73)

	Program  goto 16
	Function  goto 3
	Line  goto 4
	FunctionCall  goto 6
	Assignment  goto 7

state 12
	Function:  DEF NAME.'(' Args ')' ':' BREAK TAB FunctionBody 

	'('  shift 17
	.  error


state 13
	FunctionCall:  NAME '('.ArgsExpr ')' 
	ArgsExpr: .    (19)

	NAME  shift 22
	'\''  shift 21
	.  reduce 19 (src line 164)

	FunctionCall  goto 20
	ArgsExpr  goto 18
	Expr  goto 19

state 14
	Assignment:  NAME '='.Expr 

	NAME  shift 22
	'\''  shift 21
	.  error

	FunctionCall  goto 20
	Expr  goto 23

state 15
	Program:  Function BREAK Program.    (3)

	.  reduce 3 (src line 63)


state 16
	Program:  Line BREAK Program.    (4)

	.  reduce 4 (src line 68)


state 17
	Function:  DEF NAME '('.Args ')' ':' BREAK TAB FunctionBody 
	Args: .    (8)

	NAME  shift 25
	.  reduce 8 (src line 97)

	Args  goto 24

state 18
	FunctionCall:  NAME '(' ArgsExpr.')' 

	')'  shift 26
	.  error


state 19
	ArgsExpr:  Expr.TailExpr 
	TailExpr: .    (21)

	','  shift 28
	.  reduce 21 (src line 175)

	TailExpr  goto 27

state 20
	Expr:  FunctionCall.    (23)

	.  reduce 23 (src line 187)


state 21
	Expr:  '\''.NAME '\'' 

	NAME  shift 29
	.  error


state 22
	FunctionCall:  NAME.'(' ArgsExpr ')' 
	Expr:  NAME.    (25)

	'('  shift 13
	.  reduce 25 (src line 197)


state 23
	Assignment:  NAME '=' Expr.    (22)

	.  reduce 22 (src line 181)


state 24
	Function:  DEF NAME '(' Args.')' ':' BREAK TAB FunctionBody 

	')'  shift 30
	.  error


state 25
	Args:  NAME.Tail 
	Tail: .    (10)

	','  shift 32
	.  reduce 10 (src line 108)

	Tail  goto 31

state 26
	FunctionCall:  NAME '(' ArgsExpr ')'.    (17)

	.  reduce 17 (src line 152)


state 27
	ArgsExpr:  Expr TailExpr.    (18)

	.  reduce 18 (src line 159)


state 28
	TailExpr:  ','.Expr TailExpr 

	NAME  shift 22
	'\''  shift 21
	.  error

	FunctionCall  goto 20
	Expr  goto 33

state 29
	Expr:  '\'' NAME.'\'' 

	'\''  shift 34
	.  error


state 30
	Function:  DEF NAME '(' Args ')'.':' BREAK TAB FunctionBody 

	':'  shift 35
	.  error


state 31
	Args:  NAME Tail.    (7)

	.  reduce 7 (src line 92)


state 32
	Tail:  ','.NAME Tail 

	NAME  shift 36
	.  error


state 33
	TailExpr:  ',' Expr.TailExpr 
	TailExpr: .    (21)

	','  shift 28
	.  reduce 21 (src line 175)

	TailExpr  goto 37

state 34
	Expr:  '\'' NAME '\''.    (24)

	.  reduce 24 (src line 192)


state 35
	Function:  DEF NAME '(' Args ')' ':'.BREAK TAB FunctionBody 

	BREAK  shift 38
	.  error


state 36
	Tail:  ',' NAME.Tail 
	Tail: .    (10)

	','  shift 32
	.  reduce 10 (src line 108)

	Tail  goto 39

state 37
	TailExpr:  ',' Expr TailExpr.    (20)

	.  reduce 20 (src line 170)


state 38
	Function:  DEF NAME '(' Args ')' ':' BREAK.TAB FunctionBody 

	TAB  shift 40
	.  error


state 39
	Tail:  ',' NAME Tail.    (9)

	.  reduce 9 (src line 103)


state 40
	Function:  DEF NAME '(' Args ')' ':' BREAK TAB.FunctionBody 
	FunctionBody: .    (13)

	NAME  shift 8
	RETURN  shift 44
	.  reduce 13 (src line 128)

	FunctionBody  goto 41
	Return  goto 43
	Line  goto 42
	FunctionCall  goto 6
	Assignment  goto 7

state 41
	Function:  DEF NAME '(' Args ')' ':' BREAK TAB FunctionBody.    (6)

	.  reduce 6 (src line 79)


state 42
	FunctionBody:  Line.BREAK TAB FunctionBody 

	BREAK  shift 45
	.  error


state 43
	FunctionBody:  Return.    (12)

	.  reduce 12 (src line 121)


state 44
	Return:  RETURN.Expr 

	NAME  shift 22
	'\''  shift 21
	.  error

	FunctionCall  goto 20
	Expr  goto 46

state 45
	FunctionBody:  Line BREAK.TAB FunctionBody 

	TAB  shift 47
	.  error


state 46
	Return:  RETURN Expr.    (14)

	.  reduce 14 (src line 136)


state 47
	FunctionBody:  Line BREAK TAB.FunctionBody 
	FunctionBody: .    (13)

	NAME  shift 8
	RETURN  shift 44
	.  reduce 13 (src line 128)

	FunctionBody  goto 48
	Return  goto 43
	Line  goto 42
	FunctionCall  goto 6
	Assignment  goto 7

state 48
	FunctionBody:  Line BREAK TAB FunctionBody.    (11)

	.  reduce 11 (src line 114)


14 terminals, 14 nonterminals
26 grammar rules, 49/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
63 working sets used
memory: parser 43/240000
3 extra closures
41 shift entries, 1 exceptions
27 goto entries
13 entries saved by goto default
Optimizer space used: output 54/240000
54 table entries, 0 zero
maximum spread: 14, maximum offset: 47
